project(DSA)
cmake_minimum_required(VERSION 2.8)

set(CMAKE_CXX_STANDARD 11)
set(CMAKE_CXX_FLAGS "-O0")
add_subdirectory(vector)
add_subdirectory(List)
add_subdirectory(stack)
add_subdirectory(queue)
add_subdirectory(BinaryTree)
add_subdirectory(PFC)
add_subdirectory(graph)
add_subdirectory(BST)
add_subdirectory(BTree)
add_subdirectory(Dict)
add_subdirectory(PriorityQueue)
add_subdirectory(StringMatch)
add_subdirectory(Select)
add_subdirectory(test)
