add_executable(BinaryTree main.cpp ../_share/release.h ../PFC/PFC.h ../PFC/main.cpp ../BST/main.cpp ../BTree/btree.h ../BTree/main.cpp ../Dict/main.cpp ../Dict/dict.h ../_share/Entry.h ../PriorityQueue/main.cpp ../PriorityQueue/PQ.h ../PriorityQueue/PQ_ComplHeap.h ../_share/utils.h ../StringMatch/main.cpp)